cmake_minimum_required(VERSION 3.22.1)
project(CppBasics)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)

add_subdirectory(BasicStructures/FirstSteps)
add_subdirectory(BasicStructures/DataTypes)
add_subdirectory(BasicStructures/Branching&Loops)
add_subdirectory(BasicStructures/Vectors&Strings)
add_subdirectory(BasicStructures/Functions)